[package]
name = "md-lsp"
version = "0.1.0"
authors = ["matkrin <matkrin@protonmail.com>"]
edition = "2021"
description = "Markdown language server"
documentation = "https://github.com/matkrin/md-lsp"
homepage = "https://github.com/matkrin/md-lsp"
repository = "https://github.com/matkrin/md-lsp"
readme = "README.md"
license = "MIT"
keywords = ["lsp", "language-server", "markdown"]
categories = ["development-tools", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.16", features = ["derive"] }
dprint-core = { version = "0.66.1", features = ["formatting"] }
dprint-plugin-markdown = "0.16.4"
fern = "0.6.2"
humantime = "2.1.0"
ignore = "0.4.22"
itertools = "0.12.0"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
markdown = "1.0.0-alpha.16"
percent-encoding = "2.3.1"
regex = "1.10.3"
serde = "1.0.195"
serde_json = "1.0.111"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
